# toob

./: Cargo.toml  README.md
src/: cli.rs  cmd.rs  error.rs  lib.rs  main.rs
src/cmd/: allele_re2map.rs  json2tsv.rs  map_variants.rs  parse_allele_reg.rs  vars2exac.rs
src/util/: json.rs
